# UnrealFramework

./: .gitignore  .gitmodules  CMakeLists.txt
generated_include/: MemberVariableLayout_HeaderWrapper_FArrayProperty.hpp  MemberVariableLayout_HeaderWrapper_FField.hpp  MemberVariableLayout_HeaderWrapper_FMapProperty.hpp  MemberVariableLayout_HeaderWrapper_FMulticastDelegateProperty.hpp  MemberVariableLayout_HeaderWrapper_FObjectPropertyBase.hpp  MemberVariableLayout_HeaderWrapper_FOutputDevice.hpp  MemberVariableLayout_HeaderWrapper_FProperty.hpp  MemberVariableLayout_HeaderWrapper_FStructProperty.hpp  MemberVariableLayout_HeaderWrapper_UClass.hpp  MemberVariableLayout_HeaderWrapper_UEnum.hpp  MemberVariableLayout_HeaderWrapper_UField.hpp  MemberVariableLayout_HeaderWrapper_UFunction.hpp  MemberVariableLayout_HeaderWrapper_UObjectBase.hpp  MemberVariableLayout_HeaderWrapper_UScriptStruct.hpp  MemberVariableLayout_HeaderWrapper_UScriptStruct__ICppStructOps.hpp  MemberVariableLayout_HeaderWrapper_UStruct.hpp  MemberVariableLayout_HeaderWrapper_UWorld.hpp  MemberVariableLayout_SrcWrapper_FArrayProperty.hpp  MemberVariableLayout_SrcWrapper_FField.hpp  MemberVariableLayout_SrcWrapper_FMapProperty.hpp  MemberVariableLayout_SrcWrapper_FMulticastDelegateProperty.hpp  MemberVariableLayout_SrcWrapper_FObjectPropertyBase.hpp  MemberVariableLayout_SrcWrapper_FOutputDevice.hpp  MemberVariableLayout_SrcWrapper_FProperty.hpp  MemberVariableLayout_SrcWrapper_FStructProperty.hpp  MemberVariableLayout_SrcWrapper_UClass.hpp  MemberVariableLayout_SrcWrapper_UEnum.hpp  MemberVariableLayout_SrcWrapper_UField.hpp  MemberVariableLayout_SrcWrapper_UFunction.hpp  MemberVariableLayout_SrcWrapper_UObjectBase.hpp  MemberVariableLayout_SrcWrapper_UScriptStruct.hpp  MemberVariableLayout_SrcWrapper_UScriptStruct__ICppStructOps.hpp  MemberVariableLayout_SrcWrapper_UStruct.hpp  MemberVariableLayout_SrcWrapper_UWorld.hpp  VTableOffsets_FField.hpp  VTableOffsets_FMalloc.hpp  VTableOffsets_FMulticastDelegateProperty.hpp  VTableOffsets_FNumericProperty.hpp  VTableOffsets_FObjectPropertyBase.hpp  VTableOffsets_FOutputDevice.hpp  (+10 more)
generated_include/FunctionBodies/: 4_12_MemberVariableLayout_DefaultSetter_UWorld.cpp  4_12_VTableOffsets_FNumericProperty_FunctionBody.cpp  4_12_VTableOffsets_FObjectPropertyBase_FunctionBody.cpp  4_12_VTableOffsets_FProperty_FunctionBody.cpp  4_12_VTableOffsets_UField_FunctionBody.cpp  4_12_VTableOffsets_UMulticastDelegateProperty_FunctionBody.cpp  4_12_VTableOffsets_UNumericProperty_FunctionBody.cpp  4_12_VTableOffsets_UObjectPropertyBase_FunctionBody.cpp  4_12_VTableOffsets_UObject_FunctionBody.cpp  4_12_VTableOffsets_UProperty_FunctionBody.cpp  4_12_VTableOffsets_UStruct_FunctionBody.cpp  4_13_MemberVariableLayout_DefaultSetter_UWorld.cpp  4_13_VTableOffsets_FNumericProperty_FunctionBody.cpp  4_13_VTableOffsets_FObjectPropertyBase_FunctionBody.cpp  4_13_VTableOffsets_FProperty_FunctionBody.cpp  4_13_VTableOffsets_UField_FunctionBody.cpp  4_13_VTableOffsets_UObjectBaseUtility_FunctionBody.cpp  4_13_VTableOffsets_UObjectBase_FunctionBody.cpp  4_13_VTableOffsets_UObject_FunctionBody.cpp  4_13_VTableOffsets_UStruct_FunctionBody.cpp  4_14_MemberVariableLayout_DefaultSetter_UWorld.cpp  4_14_VTableOffsets_FNumericProperty_FunctionBody.cpp  4_14_VTableOffsets_FObjectPropertyBase_FunctionBody.cpp  4_14_VTableOffsets_FProperty_FunctionBody.cpp  4_14_VTableOffsets_UField_FunctionBody.cpp  4_14_VTableOffsets_UObject_FunctionBody.cpp  4_14_VTableOffsets_UScriptStruct__ICppStructOps_FunctionBody.cpp  4_14_VTableOffsets_UStruct_FunctionBody.cpp  4_15_MemberVariableLayout_DefaultSetter_UWorld.cpp  4_15_VTableOffsets_FNumericProperty_FunctionBody.cpp  4_15_VTableOffsets_FObjectPropertyBase_FunctionBody.cpp  4_15_VTableOffsets_FProperty_FunctionBody.cpp  4_15_VTableOffsets_UField_FunctionBody.cpp  4_15_VTableOffsets_UObjectBaseUtility_FunctionBody.cpp  4_15_VTableOffsets_UObject_FunctionBody.cpp  4_15_VTableOffsets_UScriptStruct__ICppStructOps_FunctionBody.cpp  4_15_VTableOffsets_UStruct_FunctionBody.cpp  4_16_VTableOffsets_FNumericProperty_FunctionBody.cpp  4_16_VTableOffsets_FObjectPropertyBase_FunctionBody.cpp  4_16_VTableOffsets_FOutputDevice_FunctionBody.cpp  (+107 more)
generated_src/: VTableOffsets_FField.cpp  VTableOffsets_FMalloc.cpp  VTableOffsets_FMulticastDelegateProperty.cpp  VTableOffsets_FNumericProperty.cpp  VTableOffsets_FObjectPropertyBase.cpp  VTableOffsets_FOutputDevice.cpp  VTableOffsets_FProperty.cpp  VTableOffsets_UField.cpp  VTableOffsets_UMulticastDelegateProperty.cpp  VTableOffsets_UNumericProperty.cpp  VTableOffsets_UObject.cpp  VTableOffsets_UObjectBase.cpp  VTableOffsets_UObjectBaseUtility.cpp  VTableOffsets_UProperty.cpp  VTableOffsets_UScriptStruct__ICppStructOps.cpp  VTableOffsets_UStruct.cpp
include/DynamicOutput/: DebugConsoleDevice.hpp  DynamicOutput.hpp  FileDevice.hpp  Output.hpp  OutputDevice.hpp  TestDevice.hpp
include/File/: HandleTemplate.hpp  Macros.hpp
include/Helpers/: Casting.hpp  Format.hpp  String.hpp
include/SigScanner/: Common.hpp  SinglePassSigScanner.hpp
include/Unreal/: AActor.hpp  ClassDeleteListener.hpp  Common.hpp  ContainerAllocationPolicies.hpp  CustomType.hpp  DelegateBase.hpp  EnumHelper.h  EnumHelper.hpp  FAssetData.hpp  FField.hpp  FFrame.hpp  FMemory.hpp  FOutputDevice.hpp  FProperty.hpp  FRotator.hpp  FScriptArray.hpp  FString.hpp  FText.hpp  FVector.hpp  FWeakObjectPtr.hpp  (+61 more)
src/: AActor.cpp  ClassDeleteListener.cpp  ClassListener.cpp  CustomType.cpp  FAssetData.cpp  FField.cpp  FMemory.cpp  FOutputDevice.cpp  FProperty.cpp  FString.cpp  FText.cpp  FWeakObjectPtr.cpp  GameplayStatics.cpp  Hooks.cpp  NameTypes.cpp  PackageName.cpp  PropertyReaders.cpp  Quat.cpp  ReflectedFunction.cpp  Signatures.cpp  StaticOffsetFinder.cpp  TArray.cpp  TypeChecker.cpp  UAssetRegistry.cpp  UAssetRegistryHelpers.cpp  UClass.cpp  UEnum.cpp  UField.cpp  UFunction.cpp  UFunctionStructs.cpp  UObject.cpp  UObjectArray.cpp  UObjectBaseUtility.cpp  UObjectGlobals.cpp  UPackage.cpp  UScriptStruct.cpp  UStruct.cpp  UnrealCrc32.cpp  UnrealInitializer.cpp  UnrealVersion.cpp  (+3 more)
(+247 files in other folders)
